--- a/TestWPF/TestWPF/TestWPF.csproj
+++ b/TestWPF/TestWPF/TestWPF.csproj
@@ -58,6 +58,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ReplyBoxWindow.xaml.cs">
+      <DependentUpon>ReplyBoxWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="InputTextWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -77,6 +80,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ReplyBoxWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -119,6 +126,13 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Arrow.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Crawl.gif" />
+    <Resource Include="Resources\Crawl_Up.gif" />
+    <Resource Include="Resources\Kick.gif" />
+    <Resource Include="Resources\Rain.gif" />
+    <Resource Include="Resources\Stay.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
